--- a/index.html
+++ b/index.html
@@ -13,18 +13,23 @@
         <main>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4"><h2>Column 1</h2></div>
+                    <div class="col-md-4"><h2>Column 1</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="col-md-4"><h2>Column 2</h2></div>
+                    </div>
+                    <div class="col-md-4"><h2>Column 2</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="col-md-4"><h2>Column 3</h2></div>
+                    </div>
+                    <div class="col-md-4"><h2>Column 3</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6"></div>
+                    <div class="col-md-6">
                     <img src="https://picsum.photos/500/500">
-                    <div class="col-md-6"></div>
+                    </div>
+                    <div class="col-md-6">
                     <img src="https://picsum.photos/500/500">
+                    </div>
                 </div>
             </div>
         </main>
