--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Bijay Tamang - 1154366</title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="CSS/styles.css">
-        <script src="scripts/app.js"></script>
     </head>
     <body>
         <header>
@@ -13,24 +12,27 @@
         <main>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4"><h2>Column 1</h2>
+                    <div class="col-md-4 box"><h2>Column 1</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
-                    <div class="col-md-4"><h2>Column 2</h2>
+                    <div class="col-md-4 box"><h2>Column 2</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
-                    <div class="col-md-4"><h2>Column 3</h2>
+                    <div class="col-md-4 box"><h2>Column 3</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 box">
                     <img src="https://picsum.photos/500/500">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 box">
                     <img src="https://picsum.photos/500/500">
                     </div>
                 </div>
+            </div>
+            <script src="scripts/app.js"></script>
+            </script>
             </div>
         </main>
         <footer>
