--- a/index.html
+++ b/index.html
@@ -13,28 +13,25 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 box"><h2>Column 1</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="col-md-4 box"><h2>Column 2</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
+                    <p>Lorem ipsum.</p></div>
+                    <div class="col-md-4 box2"><h2>Column 2</h2>
+                    <p>Lorem ipsum.</p></div>
                     <div class="col-md-4 box"><h2>Column 3</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
+                    <p>Lorem ipsum.</p></div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 box">
-                    <img src="https://picsum.photos/500/500">
+                        <img src="https://picsum.photos/500/500" alt="Random Image 1">
                     </div>
-                    <div class="col-md-6 box">
-                    <img src="https://picsum.photos/500/500">
+                    <div class="col-md-6 box2">
+                        <img src="https://picsum.photos/500/500" alt="Random Image 2">
                     </div>
                 </div>
-            </div>
-            <script src="scripts/app.js"></script>
-            </script>
-            </div>
+               </div>
+               <script src="scripts/app.js"></script>
+               </script>
         </main>
+
         <footer>
             © Bijay Tamang - 1154366
         </footer>
