--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1>Lab Assessment 1</h1>
         </header>
         <main>
-            <div class="container">
+            <div class="container-md">
                 <div class="row">
                     <div class="col-md-4 box"><h2>Column 1</h2>
                     <p>Lorem ipsum.</p></div>
